<resources>
    <string name="app_name">DogPaw</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="signup">Sign Up</string>
    <string name="special_request">You Have A Special  Request ?</string>
    <string name="how_many_dogs">How many dogs do you need to taken care of ?</string>
    <string name="breed">Which breed is it ?</string>
    <string name="size">What is the size of your dog ?</string>
    <string name="sitter">Anything else the sitter will need to know ?</string>
    <string name="starting_date">Plese pick starting date of the service</string>
    <string name="days">Number of days required ?</string>
    <string name="n_value_type">Rs.</string>
    <string name="n_payment_massege">"This payment is calculated according to number of dogs you needed to photographed. Amount acccording to final photo format type and number of photoes you need to be taken will added to the total payment. Please cash pay your payment on your booked date. "</string>
    <string name="n_photography_first_titls">Dog Photography</string>
    <string name="n_photography_first_details">Select a Package</string>
    <string name="n_dog_family">Dog and Family Outside Photographs</string>
    <string name="n_outside_dog">Outside Dog Photographs</string>
    <string name="n_dog_studio">Studio Dog Photographs</string>
    <string name="n_payment_header">Payment For Booking</string>
    <string name="n_photography_form_first">Number of dogs needs to be photograph*</string>
    <string name="n_photography_form_second">Breed of the dog</string>
    <string name="n_photography_form_third">Weight of the dog</string>
    <string name="n_photography_form_forth">Type of phto needed to be taken*</string>
    <string name="n_photography_fifth">Most preffered time of day*</string>
    <string name="n_photography_six">Final image format*</string>

<string name="username">Username</string>
<string name="req_quote">Request A Quote</string>
<string name="contact_us">Contact Us</string>
<string name="follow_us">Follow Us</string>
<string name="firstname">First Name</string>
<string name="lastname">Last Name</string>
<string name="country">Country</string>
<string name="phone">Phone</string>
<string name="subject">Subject</string>
<string name="yourmsg">Your Message</string>
<string name="button_send">Send</string>
<string name="daycare">Dog Daycare Management</string>
<string name="all_packages">All Packages</string>
<string name="add_packages">Add Packages</string>
<string name="update_packages">Update Packages</string>
<string name="delete_packages">Delete Packages</string>
<string name="package_id">Package ID</string>
<string name="package_name">Package Name</string>
<string name="description">Description</string>
<string name="package_cost">Package Cost</string>
<string name="add">Add</string>
<string name="update">Update</string>
<string name="delete">Delete</string>
<string name="select_one">Select One</string>
<string name="dog_care">Dog Daycare</string>
<string name="select_package">Select the package you prefer ?</string>
<string name="easy">Easy</string>
<string name="easy_">Easy+</string>
<string name="premium">Premium</string>
<string name="dont_have_an_account">Don\'t have an account?</string>
<string name="email">Email</string>
<string name="sendButton">send</string>
<string name="Send">buttonSend</string>
<string name="btnNext">Next</string>
<string name="btnView">View</string>
<string name="textPackages">Packages</string>
<string name="getService">Daycare Service</string>
<string name="hintName">Owner name</string>
<string name="hintDogs">How many dogs need to taken care of ?</string>
<string name="hintBreed">Which breed it is ?</string>
<string name="hintSize">What is the size of your dog ?</string>
<string name="hintSitter">Anything else the sitter will need to know ?</string>
<string name="hintDays">Number of days required ?</string>
<string name="SaveB">SAVE</string>
<string name="showB">View</string>
<string name="UpdB">Update</string>
<string name="DelB">Delete</string>
<string name="hintFname">Full Name</string>
<string name="hintLname">Last Name</string>
<string name="hintPhone">Phone</string>
<string name="hintEmail">Email</string>
<string name="hintSubject">Subject</string>
<string name="hintMsg">Your Message</string>
<string name="SentB">SEND</string>
</resources>