<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo_background"
    tools:context=".Photography_first">

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="269dp"
        android:layout_height="139dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        android:onClick="sendToForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:srcCompat="@drawable/dog_and_family" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="266dp"
        android:layout_height="54dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/n_dog_family"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
        app:layout_constraintStart_toStartOf="@+id/imageButton6" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="96dp"
        android:autoSizeTextType="uniform"
        android:hint="@string/n_photography_first_titls"
        android:textColorHint="#000000"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/n_photography_first_details"
        android:textColorHint="#000000"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="268dp"
        android:layout_height="140dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        android:onClick="sendToForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6"
        app:srcCompat="@drawable/studio_dog" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/n_dog_studio"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintStart_toStartOf="@+id/imageButton2" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="269dp"
        android:layout_height="123dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="36dp"
        android:onClick="sendToForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/dog_outside" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/n_outside_dog"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="@+id/imageButton3" />


</androidx.constraintlayout.widget.ConstraintLayout>


