<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#31C18A5D"
    tools:context=".QuoteActivity">


    <TextView
        android:id="@+id/textView16"
        android:layout_width="330dp"
        android:layout_height="222dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="96dp"
        android:background="#486A341E"
        android:fontFamily="@font/alegreya_bold"
        android:freezesText="false"
        android:text="@string/special_request"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColorHint="@color/black"
        android:textDirection="locale"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button1"
        android:layout_width="268dp"
        android:layout_height="38dp"
        android:background="@android:color/black"
        android:onClick="sendToRequest"
        android:text="@string/req_quote"
        android:textColor="#FBF6F6"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.594" />

    <Button
        android:id="@+id/button8"
        android:layout_width="263dp"
        android:layout_height="38dp"
        android:background="#070707"
        android:onClick="sendToContactUs"
        android:text="@string/contact_us"
        android:textColor="#FDF9F9"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:layout_constraintVertical_bias="0.315" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="124dp"
        android:layout_height="33dp"
        android:text="@string/follow_us"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#05203A"
        android:textColorHighlight="#E91E63"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="50dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:srcCompat="@drawable/faceook" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="57dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        app:layout_constraintVertical_bias="0.517"
        app:srcCompat="@drawable/twit1" />

</androidx.constraintlayout.widget.ConstraintLayout>