<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/payment_back"
    tools:context=".Payment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="132dp"
        android:hint="@string/n_payment_header"
        android:textColorHint="#F5F5F5"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/n_value_type"
        android:textColorHint="@color/white"
        android:textSize="23dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/editText1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="298dp"
        android:layout_height="61dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="44dp"
        android:hint="@string/n_payment_massege"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="158dp"
        android:layout_height="43dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="124dp"
        android:background="#41121010"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:text="00000.00"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="48dp"
        android:onClick="sendBackToHome"
        android:text="Submit and Book"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />


</androidx.constraintlayout.widget.ConstraintLayout>